--- a/argocd/apps/staging/authentik.yaml
+++ b/argocd/apps/staging/authentik.yaml
@@ -29,9 +29,19 @@ spec:
           
           postgresql:
             enabled: true
+            image:
+              tag: latest
+            primary:
+              persistence:
+                storageClass: nfs-client
           
           redis:
             enabled: true
+            image:
+              tag: latest
+            master:
+              persistence:
+                storageClass: nfs-client
         
         env:
           AUTHENTIK_BOOTSTRAP_EMAIL: brian@lab1830.com
