fix: set matching postgresql password in both authentik and postgresql config

--- a/argocd/apps/staging/authentik.yaml
+++ b/argocd/apps/staging/authentik.yaml
@@ -40,8 +40,9 @@ spec:
             image:
               tag: latest
             auth:
+              username: authentik
+              database: authentik
               password: "authentik-staging-db-password"
-              postgresPassword: "authentik-staging-db-password"
             primary:
               persistence:
                 storageClass: local-path
