feat: working authentik deployment with pinned versions
- PostgreSQL 18, Redis 8, Authentik 2024.12.1
- local-path storage for staging
- Bootstrap credentials configured

--- a/argocd/apps/staging/authentik.yaml
+++ b/argocd/apps/staging/authentik.yaml
@@ -38,7 +38,7 @@ spec:
           postgresql:
             enabled: true
             image:
-              tag: latest
+              tag: "18"
             auth:
               username: authentik
               database: authentik
@@ -50,7 +50,7 @@ spec:
           redis:
             enabled: true
             image:
-              tag: latest
+              tag: "8"
             auth:
               enabled: false
             master:
