--- a/argocd/apps/staging/monitoring.yaml
+++ b/argocd/apps/staging/monitoring.yaml
@@ -49,7 +49,7 @@ spec:
                 auth_url: https://auth-staging.lab1830.com/application/o/authorize/
                 token_url: https://auth-staging.lab1830.com/application/o/token/
                 api_url: https://auth-staging.lab1830.com/application/o/userinfo/
-                role_attribute_path: contains(groups, 'Grafana Admins') && 'Admin' || 'Viewer'
+                role_attribute_path: "'Admin'"
             envFromSecret: grafana-oauth-secret
           prometheus:
             prometheusSpec:
