fix: disable monitoring network policy in staging
The policy was blocking Kubernetes API access for Grafana sidecars,
Prometheus scraping, and Authentik OAuth communication.

--- a/argocd/apps/staging/network-security.yaml
+++ b/argocd/apps/staging/network-security.yaml
@@ -29,7 +29,7 @@ spec:
         networkPolicies:
           monitoring:
             namespace: monitoring-staging
-            enabled: true
+            enabled: false
             policies:
               - name: monitoring-security-policy
                 podSelector: {}
