--- a/charts/applications/kyverno/Chart.yaml
+++ b/charts/applications/kyverno/Chart.yaml
@@ -7,3 +7,6 @@ dependencies:
   - name: kyverno
     version: "3.3.4"
     repository: https://kyverno.github.io/kyverno/
+  - name: policy-reporter
+    version: "2.24.2"
+    repository: https://kyverno.github.io/policy-reporter/
