fix: disable kyverno policyReportsCleanup hook

--- a/charts/applications/kyverno/values.yaml
+++ b/charts/applications/kyverno/values.yaml
@@ -7,9 +7,8 @@ kyverno:
     replicas: 1
   reportsController:
     replicas: 1
-  cleanupJobs:
-    cleanupReports:
-      enabled: false
+  policyReportsCleanup:
+    enabled: false
 
 policy-reporter:
   ui:
