--- a/argocd/apps/staging/kyverno.yaml
+++ b/argocd/apps/staging/kyverno.yaml
@@ -14,6 +14,7 @@ spec:
     helm:
       valueFiles:
         - values.yaml
+      skipCrds: true
   destination:
     server: https://kubernetes.default.svc
     namespace: kyverno
@@ -23,10 +24,6 @@ spec:
       - ServerSideApply=true
       - RespectIgnoreDifferences=true
   ignoreDifferences:
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      jsonPointers:
-        - /metadata/annotations
     - group: kyverno.io
       kind: ClusterPolicy
       jqPathExpressions:
