fix: ignore entire ClusterPolicy spec for kyverno mutations

--- a/argocd/apps/staging/kyverno.yaml
+++ b/argocd/apps/staging/kyverno.yaml
@@ -26,7 +26,5 @@ spec:
   ignoreDifferences:
     - group: kyverno.io
       kind: ClusterPolicy
-      jqPathExpressions:
-        - .spec.admission
-        - .spec.emitWarning
-        - .spec.rules[].skipBackgroundRequests
+      jsonPointers:
+        - /spec
