--- a/charts/applications/homepage/values.yaml
+++ b/charts/applications/homepage/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/gethomepage/homepage
   pullPolicy: IfNotPresent
-  tag: "latest"
+  tag: "v1.9.0"
 
 nameOverride: ""
 fullnameOverride: ""
