--- a/charts/applications/velero/values.yaml
+++ b/charts/applications/velero/values.yaml
@@ -88,7 +88,7 @@ nfsGateway:
   enabled: true
   image:
     repository: minio/minio
-    tag: latest
+    tag: RELEASE.2025-10-15T17-29-55Z
     pullPolicy: IfNotPresent
   credentials:
     accessKey: "velero"
