--- a/charts/applications/kyverno-policies/policy-disallow-latest-tag.yaml
+++ b/charts/applications/kyverno-policies/policy-disallow-latest-tag.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: disallow-latest-tag
 spec:
-  validationFailureAction: Audit
+  validationFailureAction: Enforce
   background: true
   rules:
     - name: validate-image-tag
