--- a/charts/applications/kyverno-policies/policy-require-labels.yaml
+++ b/charts/applications/kyverno-policies/policy-require-labels.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: require-app-label
 spec:
-  validationFailureAction: Audit
+  validationFailureAction: Enforce
   background: true
   rules:
     - name: check-app-label
