fix: exclude velero from require-app-label policy

--- a/charts/applications/kyverno-policies/policy-require-labels.yaml
+++ b/charts/applications/kyverno-policies/policy-require-labels.yaml
@@ -21,6 +21,7 @@ spec:
               - kube-node-lease
               - metallb-system
               - kyverno
+              - velero
       validate:
         message: "The label 'app.kubernetes.io/name' is required."
         pattern:
