fix: exclude monitoring-production and logging from resource limits policy

--- a/charts/applications/kyverno-policies/policy-require-resource-limits.yaml
+++ b/charts/applications/kyverno-policies/policy-require-resource-limits.yaml
@@ -25,6 +25,8 @@ spec:
               - monitoring-staging
               - metallb-system
               - ingress-nginx
+              - monitoring-production
+              - logging
       validate:
         message: "CPU and memory limits are required."
         pattern:
