--- a/argocd/apps/production/homepage.yaml
+++ b/argocd/apps/production/homepage.yaml
@@ -25,7 +25,7 @@ spec:
           className: nginx
           annotations:
             nginx.ingress.kubernetes.io/ssl-redirect: "true"
-            cert-manager.io/cluster-issuer: "letsencrypt-prod-gitops"
+            cert-manager.io/cluster-issuer: "letsencrypt-prod"
           hosts:
             - host: homepage.lab1830.com
               paths:
