--- a/argocd/apps/staging/homepage.yaml
+++ b/argocd/apps/staging/homepage.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:brianjlehnen/homelab.git
+    repoURL: git@github.com:brianjlehnen/homelab-gitops.git
     targetRevision: staging
     path: charts/applications/homepage
     helm:
