fix: add security context for postgresql on nfs

--- a/argocd/apps/production/authentik.yaml
+++ b/argocd/apps/production/authentik.yaml
@@ -66,6 +66,10 @@ spec:
             primary:
               persistence:
                 storageClass: nfs-client
+              podSecurityContext:
+                fsGroup: 1001
+              containerSecurityContext:
+                runAsUser: 1001
               resources:
                 limits:
                   cpu: 500m
