--- a/argocd/apps/production/monitoring.yaml
+++ b/argocd/apps/production/monitoring.yaml
@@ -35,6 +35,8 @@ spec:
             envFrom:
               - secretRef:
                   name: grafana-smtp-secret
+              - secretRef:
+                  name: grafana-oauth-secret
             env:
               GF_SMTP_ENABLED: "true"
               GF_SMTP_HOST: "smtp.gmail.com:587"
@@ -42,24 +44,21 @@ spec:
               GF_SMTP_FROM_NAME: "Lab1830 Grafana Alerts"
               GF_SMTP_STARTTLS_POLICY: "MandatoryStartTLS"
               GF_SMTP_SKIP_VERIFY: "false"
+              GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
+              GF_AUTH_GENERIC_OAUTH_NAME: "Authentik"
+              GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: "true"
+              GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "grafana"
+              GF_AUTH_GENERIC_OAUTH_SCOPES: "openid profile email"
+              GF_AUTH_GENERIC_OAUTH_AUTH_URL: "https://auth.lab1830.com/application/o/authorize/"
+              GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "https://auth.lab1830.com/application/o/token/"
+              GF_AUTH_GENERIC_OAUTH_API_URL: "https://auth.lab1830.com/application/o/userinfo/"
+              GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(groups[*], 'authentik Admins') && 'Admin' || 'Viewer'"
             grafana.ini:
               server:
                 root_url: "https://grafana.lab1830.com"
                 domain: "lab1830.com"
               unified_alerting:
                 enabled: true
-              auth.generic_oauth:
-                enabled: true
-                name: Authentik
-                allow_sign_up: true
-                client_id: grafana
-                client_secret: 5HukVhR6Cbqbr3UuyIc5VCxaXfuADWpyL3X7KWvDGh6xMPhcKHkUmu0h5u0jnRhMnopYpm00g5sJtIEkmOodhkjCUr3OGUCkHT6OkJLKUjx9A7kX9ZzzJZAMfkOjIdhF
-                scopes: openid profile email
-                auth_url: https://auth.lab1830.com/application/o/authorize/
-                token_url: https://auth.lab1830.com/application/o/token/
-                api_url: https://auth.lab1830.com/application/o/userinfo/
-                role_attribute_path: contains(groups[*], 'authentik Admins') && 'Admin' || 'Viewer'
-                tls_skip_verify_insecure: false
           prometheus:
             prometheusSpec:
               retention: 15d
