perf: optimize resource allocations based on Goldilocks analysis
Loki: 100m/256Mi -> 50m/550Mi requests (memory under-provisioned)
Promtail: 100m/128Mi -> 50m/200Mi requests (memory under-provisioned)
Grafana: add 25m/400Mi requests (was BestEffort QoS)

Based on 154 days of VPA recommendations from Goldilocks.

--- a/argocd/apps/production/monitoring.yaml
+++ b/argocd/apps/production/monitoring.yaml
@@ -51,6 +51,13 @@ spec:
               GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "https://auth.lab1830.com/application/o/token/"
               GF_AUTH_GENERIC_OAUTH_API_URL: "https://auth.lab1830.com/application/o/userinfo/"
               GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(groups[*], 'authentik Admins') && 'Admin' || 'Viewer'"
+            resources:
+              requests:
+                cpu: 25m
+                memory: 400Mi
+              limits:
+                cpu: 100m
+                memory: 512Mi
             grafana.ini:
               server:
                 root_url: "https://grafana.lab1830.com"
