chore: sync from private repo 2026-01-29

--- a/charts/applications/wireguard/values.yaml
+++ b/charts/applications/wireguard/values.yaml
@@ -57,9 +57,9 @@ wireguard:
   # Subnet for VPN clients
   subnet: "10.8.0.1"
   # Allowed IPs for clients (homelab access)
-  allowedIPs: "192.168.4.0/22, 10.8.0.0/24"
+  allowedIPs: "192.168.x.0/22, 10.8.0.0/24"
   # DNS servers for clients
-  dns: "192.168.4.254"
+  dns: "192.168.x.254"
   # Web UI password - MUST be overridden in production!
   # Create secret: kubectl create secret generic wireguard-ui-secret -n wireguard --from-literal=password=<secure-password>
   password: "CHANGE_ME_IN_ARGOCD_VALUES"
