--- a/charts/infrastructure/network-security/values.yaml
+++ b/charts/infrastructure/network-security/values.yaml
@@ -189,7 +189,7 @@ networkPolicies:
           # MinIO/S3 on NAS
           - to:
             - ipBlock:
-                cidr: "192.168.4.159/32"
+                cidr: "192.168.x.159/32"
             ports:
               - protocol: TCP
                 port: 9000
@@ -203,7 +203,7 @@ networkPolicies:
           # NFS for volume backups
           - to:
             - ipBlock:
-                cidr: "192.168.4.159/32"
+                cidr: "192.168.x.159/32"
             ports:
               - protocol: TCP
                 port: 2049
