--- a/argocd/apps/production/network-security.yaml
+++ b/argocd/apps/production/network-security.yaml
@@ -21,10 +21,10 @@ spec:
       values: |
         # Production-specific network configuration
         global:
-          nfsServer: "192.168.4.159"
-          lokiEndpoint: "192.168.4.250"
+          nfsServer: "192.168.x.159"
+          lokiEndpoint: "192.168.x.250"
           lokiPort: 31000
-          clusterCIDR: "192.168.4.0/22"
+          clusterCIDR: "192.168.x.0/22"
 
         # Enable network policies for production (vault removed)
         networkPolicies:
